--- a/proj.win32/.gitignore
+++ b/proj.win32/.gitignore
@@ -103,6 +103,7 @@ tools/jenkins_scripts/mac/android/userconf.ini
 tags
 
 # ignore files, created with make-all-linux-project script
+/lib
 /build/linux-build
 
 # Cmake files
